# recursiveseriation

./: .gitignore  CITATION.cff  LICENSE  README.md  README.rst  example.ipynb  pyproject.toml  rstree.py
.github/workflows/: ci.yml  publish.yml
examples/: example.ipynb  example_points_in_circle.ipynb  minimal_example.ipynb  performance.ipynb
recursiveseriation/: __init__.py  logger.py  neighbours_graph.py  qtree.py  seriation.py  settings.py  utils.py
recursiveseriation/solver/: neighbours_graph.py  qtree.py  seriation.py
tests/: test_seriation.py  test_utils.py
